# joyce

./: .env.example  .env.template  .gitignore  README.md  biome.json  package.json  turbo.json
apps/agents/: README.md  main.py  pyproject.toml
apps/agents/src/: agent.py
apps/mobile/: app.json  babel.config.js  biome.json  package.json  tsconfig.json
apps/mobile/.github/workflows/: test.yaml
apps/mobile/app/: _layout.tsx
apps/mobile/app/(start)/: _layout.tsx  index.tsx
apps/mobile/app/assistant/: index.tsx
apps/mobile/app/assistant/ui/: AgentVisualization.tsx  ChatBar.tsx  ChatLog.tsx  ControlBar.tsx
apps/mobile/hooks/: useConnectionDetails.ts  useDataStreamTranscriptions.ts
apps/mobile/src/: App.tsx  env.ts
apps/mobile/src/components/: CallControls.tsx  JoinForm.tsx  RoomView.tsx
apps/mobile/src/services/: ApiService.ts
apps/mobile/src/types/: index.ts
apps/server/: .gitignore  alembic.ini  main.py  package.json  pyproject.toml  tsconfig.json
apps/server/alembic/: env.py
apps/server/alembic/versions/: 001_initial_database_schema.py  001_initial_table_schema.py  002_add_user_profile_status_for_onboarding.py  003_create_user_entities_table.py
apps/server/joyce/: __init__.py  agent.py  env.py  server.py
apps/server/joyce/agent/: joyce.py  models.py  onboarding.py  run.py  user.py  voice.py
apps/server/joyce/agent/functions/: __init__.py  extract_entities.py  extract_memories.py  extract_user_profile.py  onboarding.py  user_entity.py  user_profile.py
apps/server/joyce/agent/prompts/: __init__.py  joyce.py  onboarding.py  tools.py  user.py
apps/server/joyce/agent/tools/: __init__.py  call.py  complete_onboarding.py  memory.py  update_user_profile.py  user_entity.py  user_profile.py  utils.py
apps/server/joyce/db/: __init__.py  client.py  utils.py
apps/server/joyce/db/schema/: __init__.py  auth.py  base.py  memory.py  memory_chunk.py  memory_tag.py  tag.py  user_entities.py  user_profile.py
apps/server/joyce/lm/: embed.py
apps/server/joyce/services/: supabase.py
apps/server/joyce/services/user/: __init__.py  user_entities.py  user_service.py
apps/server/joyce/types/: __init__.py  agent_tool.py  memory.py  user_entity.py  user_profile.py
apps/server/joyce/utils/: __init__.py  json.py  lru_cache.py  string.py  tabulate.py
apps/server/joyce/vs/: __init__.py  chroma.py  insert.py  models.py  search.py  similarity.py
apps/server/scripts/: init_user.py  reset_user.py  seed_tags.py  test_entity_extraction.py  test_memory.py
apps/server/src/: agent.ts  config.ts  env.ts  index.ts  logger.ts  server.ts
